--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ nav{
 .bg-custom2{
     background-color: #000;
     color: #fffefe;
-    margin-left: 3vw;
+    position: relative;
+    left: 2.5vw;
 }
 input.form-control:focus {
     background-color: #000; 
@@ -94,3 +95,34 @@ input.form-control:focus {
     display: flex;
     flex-wrap: wrap;
 }
+
+.card-img-top{
+    height: 40vh;
+    width: 18vw;
+}
+.bg-custom11{
+    margin-right: 1vw;
+}
+.card{
+    width: 18vw;
+    font-family: 'Helvetica Neue', sans-serif;
+    background-color: #000;
+    color: #949494;
+    margin: 2vh;
+   
+
+ 
+}
+.card-title{
+    font-family: 'Helvetica Neue', sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  
+  color: #ffffff;
+}
+#listaFilmes {
+    display: flex;
+    flex-wrap: wrap;
+    align-self: center;
+  }
+  
