--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ input.form-control:focus {
 .bg-custom6{
     background-color: #000000;
     color: #fff;
-    margin-top: 3vh;
-    margin-left: 1vw;
+
 
 }
 .bg-custom7{
@@ -100,16 +99,13 @@ input.form-control:focus {
     height: 40vh;
     width: 18vw;
 }
-.bg-custom11{
-    margin-right: 1vw;
-}
+
 .card{
     width: 18vw;
     font-family: 'Helvetica Neue', sans-serif;
     background-color: #000;
     color: #949494;
-    margin: 2vh;
-   
+   margin-top: -2vh;
 
  
 }
@@ -118,11 +114,25 @@ input.form-control:focus {
   font-weight: 600;
   font-size: 18px;
   
-  color: #ffffff;
+  color: #fcfcfc;
 }
 #listaFilmes {
     display: flex;
     flex-wrap: wrap;
     align-self: center;
   }
-  
+  .bg-custom12{
+    
+    margin-left: 2.8vw;
+    
+  }
+
+ .row{
+    margin: 0%;
+    padding: 0%;
+ }
+ .container{
+    margin-left: 3vw;
+   margin-top: 5vh;
+    padding: 0%;
+ }
