--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,16 @@ input.form-control:focus {
 
  
 }
+.card1{
+  width: 21vw;
+  
+  font-family: 'Helvetica Neue', sans-serif;
+  background-color: #000;
+  color: #949494;
+ margin-top: 2vh;
+margin: 2vh;
+
+}
 .card-title{
     font-family: 'Helvetica Neue', sans-serif;
   font-weight: 600;
@@ -118,6 +128,17 @@ input.form-control:focus {
   color: #fcfcfc;
   margin: 0;
   padding: 0;
+}
+.card-title1{
+  font-family: 'Helvetica Neue', sans-serif;
+font-weight: 600;
+font-size: 18px;
+height: 6vh;
+width: 17vw;
+color: #fcfcfc;
+margin-left: 0.8vw;
+margin-top: 2vh;
+padding: 0;
 }
 #titulo1{
     font-family: 'Helvetica Neue', sans-serif;
@@ -203,6 +224,7 @@ input.form-control:focus {
     display: flex;
     flex-wrap: wrap;
     align-self: center;
+    visibility:visible;
   }
   .bg-custom12{
     
@@ -231,11 +253,28 @@ margin-bottom: 1vh;
 margin-top: 3vh;
 
  }
+ .btnDetalheFilme1{
+  width: 5.8vw;
+  text-align: center;
+      background-color: #000;
+      color: #cccccc;
+      border: solid 1px #e0e0e0;
+      border-radius:8px;
+      bottom: 0;
+  margin-bottom: 2vh;
+  margin-top: 3vh;
+  margin-left: 1vw;
+  
+   }
 .btnDetalheFilme:hover{
   background-color: #fff;
   color: #000;
 }
 
+.btnDetalheFilme1:hover{
+  background-color: #fff;
+  color: #000;
+}
 
  .genero{
     color: #333333;
@@ -243,7 +282,12 @@ margin-top: 3vh;
   
 
  }
+ .genero1{
+  color: #333333;
+ margin-left: 1vw;
 
+
+}
 
 
  .Classifica{
@@ -252,6 +296,10 @@ margin-top: 3vh;
  }
  .Ano{
   margin-right: 6vw;
+    width: 6vw;
+ }
+ .Ano1{
+  margin-left: 1vw;
     width: 6vw;
  }
 .img{
@@ -310,3 +358,10 @@ margin-right: 2vw;
  .Generodet{
   display: flex;
  }
+.favoritosmostrar{
+  display: flex;
+  flex-wrap: wrap;
+  align-self: center;
+  visibility:visible;
+  margin: 1vh;
+}
