--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,10 @@ input.form-control:focus {
     height: 50vh;
     width: 18vw;
 }
-
+.card-img-top1{
+  height: 50vh;
+  width: 19vw;
+}
 .card{
     width: 19vw;
     font-family: 'Helvetica Neue', sans-serif;
@@ -251,6 +254,7 @@ text-align: center;
     bottom: 0;
 margin-bottom: 1vh;
 margin-top: 3vh;
+margin-left: 1vw;
 
  }
  .btnDetalheFilme1{
